// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioIcon Should render a check icon if isChecked is set to true 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c0 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

<svg
  aria-hidden={true}
  className="kirk-icon kirk-icon-circle c0"
  fill="#00AFF5"
  height={24}
  viewBox="0 0 66 66"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  
  <circle
    className="jsx-2931153156"
    cx="33"
    cy="33"
    fill="none"
    r="30"
    stroke="#00AFF5"
  />
  <circle
    className="jsx-2931153156 inner"
    cx="33"
    cy="33"
    fill="#00AFF5"
    r="18"
  />
</svg>
`;

exports[`RadioIcon Should render a loader if isLoading and isChecked are set to true 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c0 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

<div
  className="jsx-2765694959 kirk-loader"
  style={
    Object {
      "height": "24px",
      "width": "24px",
    }
  }
>
  <svg
    aria-hidden={true}
    className="kirk-icon kirk-icon-circle spinning c0"
    fill="#5DD167"
    height={24}
    viewBox="0 0 66 66"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <circle
      className="jsx-2931153156"
      cx="33"
      cy="33"
      fill="none"
      r="30"
      stroke="#5DD167"
    />
  </svg>
</div>
`;

exports[`RadioIcon Should render a loader if isLoading is set to true 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c0 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

<div
  className="jsx-2765694959 kirk-loader"
  style={
    Object {
      "height": "24px",
      "width": "24px",
    }
  }
>
  <svg
    aria-hidden={true}
    className="kirk-icon kirk-icon-circle spinning c0"
    fill="#5DD167"
    height={24}
    viewBox="0 0 66 66"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <circle
      className="jsx-2931153156"
      cx="33"
      cy="33"
      fill="none"
      r="30"
      stroke="#5DD167"
    />
  </svg>
</div>
`;

exports[`RadioIcon Should render an empty circle by default 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c0 .kirk-icon-badge {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

<svg
  aria-hidden={true}
  className="kirk-icon kirk-icon-circle c0"
  fill="#00AFF5"
  height={24}
  viewBox="0 0 66 66"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  
  <circle
    className="jsx-2931153156"
    cx="33"
    cy="33"
    fill="none"
    r="30"
    stroke="#00AFF5"
  />
</svg>
`;
